* Extended characters in the group trove description no longer break the cook
  process with an "invalid type for set" error. Extended characters are
  converted to '?' when passed into Conary.
* Component Removal from Group Builder now exists. For now it is hidden away on the edit projects page.
* Cookie rejection is tested at login instead of silently failing.

Changes in 1.6.1:

* Bootable images now save the taghandler script and the output
  of that script in /root/, the same way the installable CD does.
* A warning now appears at the top of the project page if the project's
  FQDN is not resolvable.
* Mailing lists are now created with the default options to reject all
  non-member posts.
* "Remember me on this computer" now functions as expected.
* Search results have a better UI.
* The projects pane expands to fit the contents.
* The IP address of the job server is now correctly recorded in the JobData
  table.
* The group cook page uses the new status dialog.

Changes in 1.6.0:

* Redirects in the group builder are now handled more correctly:
  the correct flavored redirect will be pulled in automatically.
* Group Builder conflicts have been modified to behave more intuitively.
  User specified troves will always replace troves pulled in from deps.
* Many other changes and bug fixes.

Changes in 1.5.4:

* configurable ISO sizes
* media-template support

Changes in 1.5.0;

* Massive UI updates.
* Many bug fixes.
* Bootable image support.

Changes in 1.2.3:

* Move to the proposed official mailman XMLRPC patch
* Add a link on the mailing list page to allow project owners to reset
  list passwords

Changes in 1.2.2:

* The users admin interface now displays properly on a MySQL install.
* ShimNetClient uses the default rate limit instead of explicitly 
  using 0.
* The releases page has been redesigned.
* Many bug fixes and updates.

Changes in 1.2.1:

* Fix redirect from rpath.com to www.rpath.com (for example)